@@ -1,3 +1,9 @@
+2008-02-01  Akira TAGOH  <tagoh@redhat.com>
+
+	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list):
+	Choose the recommended IM if no current IM is running. otherwise
+	the first entry will.
+
 2008-01-30  Akira TAGOH  <tagoh@redhat.com>
 
 	* data/xinput.sh.in.in: Add a wait for a workaround that something
